--- a/css/custom/samaritan.css
+++ b/css/custom/samaritan.css
@@ -12,6 +12,10 @@
   color: var(--lightSamaritan) !important;
 }
 
+.lightSamaritan-panel-bg {
+  background-color: var(--lightSamaritan);
+}
+
 .samaritan-background {
   background-image: url('data:image/svg+xml,<svg id="visual" viewBox="0 0 960 540" width="960" height="540" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><defs><filter id="blur1" x="-10%" y="-10%" width="120%" height="120%"><feFlood flood-opacity="0" result="BackgroundImageFix"></feFlood><feBlend mode="normal" in="SourceGraphic" in2="BackgroundImageFix" result="shape"></feBlend><feGaussianBlur stdDeviation="163" result="effect1_foregroundBlur"></feGaussianBlur></filter></defs><rect width="960" height="540" fill="%233c6382"></rect><g filter="url(%23blur1)"><circle cx="811" cy="471" fill="%230a3d62" r="363"></circle><circle cx="853" cy="106" fill="%233c6382" r="363"></circle><circle cx="186" cy="153" fill="%230a3d62" r="363"></circle><circle cx="374" cy="95" fill="%230a3d62" r="363"></circle><circle cx="299" cy="461" fill="%233c6382" r="363"></circle><circle cx="643" cy="399" fill="%230a3d62" r="363"></circle></g></svg>');
   background-repeat: no-repeat;
@@ -20,10 +24,6 @@
   --cnvs-heading-color: white;
   fill: white;
   --cnvs-link-color: var(--samaritan);
-}
-
-.semi-transparent-text-background.samaritan {
-  background-color: rgba(60, 99, 130, 0.5);
 }
 
 a:not(.btn-link) {
@@ -68,4 +68,21 @@ a:not(.btn-link) {
 
 form label {
   color: white
+}
+
+.btn-primary {
+  --bs-btn-color: var(--lightSamaritan);
+  --bs-btn-bg: var(--samaritan);
+  --bs-btn-border-color: var(--samaritan);
+  --bs-btn-hover-color: var(--lightSamaritan);
+  --bs-btn-hover-bg: var(--darkSamaritan);
+  --bs-btn-hover-border-color: var(--samaritan);
+  --bs-btn-focus-shadow-rgb: 49, 132, 253;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: var(--lightSamaritan);
+  --bs-btn-active-border-color: var(--lightSamaritan);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: var(--samaritan);
+  --bs-btn-disabled-border-color: var(--samaritan);
 }
